# realtime-embeded-system-assignment

./: .gitignore  CMakeLists.txt  README.md  how_to_use.cpp  howtouse.py  minimax_algorithm.cpp  minimax_algorithm.h  minimax_algorithm.py  zwp.cpp
include/arm/: rpi_pwm.h
src/: main.cpp
src/camera/: GomokuCam.cpp  GomokuCam3.cpp  GomokuCam4.cpp
tests/: test_cam.cpp  test_pwm.cpp  test_servo.cpp
tools/: test_cam.py
tools/module_tests/: test_servo.py
